k8s/postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  serviceName: postgres
  replicas: 1

  selector:
    matchLabels:
      app: postgres

  template:
    metadata:
      labels:
        app: postgres

    spec:
      containers:
      - name: postgres
        image: postgres:15

        ports:
        - containerPort: 5432

        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data

        - name: initdb
          mountPath: /docker-entrypoint-initdb.d/init.sql
          subPath: init.sql

      volumes:
      - name: initdb
        configMap:
          name: init-sql

  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
