k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  selector:
    app: flask-demo
  ports:
    - port: 5000
      targetPort: 5000
  type: NodePort
